--- a/src/components/NewUsers/NewUsers.module.css
+++ b/src/components/NewUsers/NewUsers.module.css
@@ -1,3 +1,10 @@
+.add-user {
+    width: 90%;
+    margin: 2rem auto;
+    padding: 1rem;
+    max-width: 40rem;
+}
+
 .user-input {
     width: 95%;
     padding: 0.5rem;
