--- a/src/components/Users/UsersList.module.css
+++ b/src/components/Users/UsersList.module.css
@@ -1,3 +1,10 @@
+.users {
+    width: 90%;
+    margin: 2rem auto;
+    padding: 1rem;
+    max-width: 40rem;
+}
+
 .users-list {
     display: flex;
     flex-direction: column;
