--- a/src/components/UI/Warning.module.css
+++ b/src/components/UI/Warning.module.css
@@ -18,7 +18,7 @@
 }
 
 .warning-title {
-    background-color: #4f005f;
+    background-color: #303179;
     padding: 1rem;
 }
 
@@ -39,4 +39,11 @@
     padding: 1rem;
     display: flex;
     justify-content: flex-end;
+}
+
+@media (min-width: 768px) {
+    .warning {
+        left: calc(50% - 20rem);
+        width: 40rem;
+    }
 }
